# RAG-Aplication-for-RSG-Media

./: .gitignore  README.md  create_zip.py
packaging/: requirements.txt
packaging/db/dump/: supabase_2024-DD-MM_Vortex.dump
packaging/db/schema/: chunks.sql  documents.sql
packaging/documentation/: usage_instructions.md
packaging/sample_processed_docs/1/output/: chunked.json  partitioned.json
packaging/sample_processed_docs/2/output/: chunked.json  partitioned.json
packaging/sample_processed_docs/3/output/: chunked.json  partitioned.json
packaging/src/backend/: pyproject.toml  rag_functions.py  store_chunks.py
packaging/src/backend/helpers/: __init__.py  config.py  enrichments.py  file_and_folder.py  logging.py  pdf_annotation.py  pdf_ingest.py
packaging/src/frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
packaging/src/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
packaging/src/frontend/app/api/download/[filename]/: route.ts
packaging/src/frontend/app/api/extract/: route.ts
packaging/src/frontend/app/api/query/: route.ts
packaging/src/frontend/app/api/upload/: route.ts
packaging/src/frontend/app/components/: FileUpload.tsx
packaging/src/frontend/components/: DocumentUpload.tsx  FileUpload.tsx  Home.tsx  SearchInterface.tsx
packaging/src/frontend/components/ui/: button.tsx  card.tsx  input.tsx
packaging/src/frontend/lib/: api.ts
